@@ -5,6 +5,9 @@ http://www.springframework.org
 Changes in version 1.1.0 ()
 -------------------------------------
 
+Package org.springframework.binding
+* Fixed serializability problems in ConversionException, EvaluationException and MethodInvocationException.
+
 Package org.springframework.webflow.config
 * FlowExecutorFactoryBean now has an 'inputMapper' property to conveniently configure the 'inputMapper'
   property of the created FlowExecutorImpl object.
